<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Offline Browser</string>
    <string name="title_browse">Browse</string>
    <string name="action_save">Save Page</string>
    <string name="action_savelist">Browse Saved Pages</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_mul">Select Multiple</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_load">Load Page</string>
    <string name="action_home">Home</string>

</resources>